# tasks

./: .gitattributes  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  task.py
app/: main.py
app/config/: config.py
app/display/: renderer.py
app/models/: priority.py  task_item.py
app/store/: task_store.py
app/tests/: test_main.py  test_platform_utils.py  test_priority.py  test_task_store.py
app/util/: platform_utils.py
