[project]
name = "tasks"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
]

[tool.pylint.master]
ignore = ["app/tests"]

[tool.flake8]
max-line-length = 120

[dependency-groups]
dev = [
    "black>=26.3.0",
]
